--- a/BODY/7_conclusions.tex
+++ b/BODY/7_conclusions.tex
@@ -1,3 +1,11 @@
 \chapter{Conclusions}
 \label{chap:conclusions}
 \pagestyle{fancy}
+
+This thesis explored the extension of the well understood orbifold supersymmetry breaking of the closed string spectrum to the open string spectrum. Firstly, we studied the spectrum of the theory, and matched the orbifold charges of the different representations of $SO(4)$ to those already known to the closed string. Secondly, in an attempt to reproduce the spontaneous symmetry breaking known to the closed string effective supergravity through a SS reduction, we proposed an analogour procedure in the effective worldvolume theory.
+
+As it turned out, this process seems well behaved, and it can be tuned to reproduce the spectrum found in the high energy string theory.
+
+In single brane stacks, the number of supercharges can be broken to 16, 8 or 0. While for the D1/D5 brane systen, it can only be totally broken from 8 to 0.
+
+Some questions still linger. At the hearth of this thesis, we wanted to calculate the infrared limit of the D1/D5 orbifold worldvolume theory, but due to a lack of tools to describe that IR limit, it was not possible to perform it. Besides, there is a story about theories with an $S^1$ radius $R>1$ that can restore the supersymmetry normaly broken by the orbifold, which could be worthwile to study.
