--- a/main.tex
+++ b/main.tex
@@ -78,6 +78,7 @@
 
 % APPENDIX
 \input{BODY/A_appendix-A}
+\input{BODY/B_appendix-B}
 
 % BIBLIOGRAPHY
 \setstretch{1} % DECREASE LINE SPACING IN BIBLIOGRAPHY
