--- a/packages.tex
+++ b/packages.tex
@@ -210,3 +210,5 @@ pdfkeywords={keyword1, keyword2, keyword3}
 % Nicer math usage
 \usepackage{siunitx}
 \sisetup{exponent-product=\ensuremath{{}\cdot{}}}
+
+\usepackage{comment}
