--- a/bibliography.bib
+++ b/bibliography.bib
@@ -170,3 +170,33 @@ doi = {10.1007/978-3-319-54316-1}
       archivePrefix={arXiv},
       primaryClass={hep-th}
 }
+
+@article{spinors_n_dim,
+    author = {Pais, Abraham},
+    title = "{On Spinors in n Dimensions}",
+    journal = {Journal of Mathematical Physics},
+    volume = {3},
+    number = {6},
+    pages = {1135-1139},
+    year = {1962},
+    month = {11},
+    abstract = "{The matrix which enters in the charge conjugation transformation of the usual spinors in 4‐space is an invariant matrix and is skew symmetric. It is shown that there exists such an invariant matrix C for any number of dimensions (and independent of the number of time like dimensions). Its symmetry properties depend on the dimension number n modulo 8. With the help of the C matrix one can construct, for n = 1, 2, 7, 8 mod 8, an n‐dimensional invariant bilinear in the components of a single n‐dimensional spinor. Some examples are given for n = 2, 3, 7. A bilinear baryon invariant is formed for a theory with high symmetry. Its existence is closely related to the triality property of 8‐space.}",
+    issn = {0022-2488},
+    doi = {10.1063/1.1703856},
+    url = {https://doi.org/10.1063/1.1703856},
+    eprint = {https://pubs.aip.org/aip/jmp/article-pdf/3/6/1135/19064337/1135\_1\_online.pdf},
+}
+
+@article{SCHERK197960,
+title = {Spontaneous breaking of supersymmetry through dimensional reduction},
+journal = {Physics Letters B},
+volume = {82},
+number = {1},
+pages = {60-64},
+year = {1979},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/0370-2693(79)90425-8},
+url = {https://www.sciencedirect.com/science/article/pii/0370269379904258},
+author = {J. Scherk and John H. Schwarz},
+abstract = {A general technique for deriving consistent theories with spontaneously broken supersymmetry and massive gravitinos is illustrated by exploiting the chiral invariance of N = 1 supergravity in four dimensions to construct a theory with broken N = 2 supersymmetry in three dimensions.}
+}
